# bits

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  hoge  pyproject.toml  requirements.txt  setup.cfg  setup.py
BITS/: __init__.py  core.py  plot.py  run.py  scheduler.py  seq.py  sge_nize.py  slurm_nize.py  submit.py  submit_job.py  utils.py
BITS/clustering/: base.py  numeric.py  seq.py  variant_matrix.py
BITS/plot/: plotly.py
BITS/scripts/: run_damapper.sh  run_qsub.sh  sleep.sh
BITS/scripts/tmp/: confirm_unremoved_adaptor.sh  distribute_detect.sh  map_to_human_genome.sh  qsub_memechip.sh  run_checkm.sh  run_memechip.sh  run_metabat.sh
BITS/seq/: align.py  cigar.py  consed.py  core.py  dazz.py  dot_plot.py  io.py  kmer.py  plot.py  run.py  utils.py
BITS/util/: interval.py  io.py  log.py  proc.py  scheduler.py
docs/: usage.html  usage.ipynb  usage.md
examples/: sample.fasta  sample.sh  sample.sh.sge
script/: add_jupyter_kernel.sh  delete_jupyter_kernel.sh  template.sh
src/: __init__.py
src/bits/: __init__.py
src/bits/seq/: __init__.py  _align.py  _cigar.py  _dazz.py  _io.py  _type.py
src/bits/seq/viz/: __init__.py  _alignment_plot.py  _depth.py  _dotplot.py  _genome_feature.py  _genome_plot.py  _genomeviz.py  _igv.py  _pileup.py  _region_feature.py  _synteny_plot.py
src/bits/util/: __init__.py  _counter.py  _scheduler.py
src/clustering/: __init__.py  base.py  numeric.py  seq.py
src/plot/: __init__.py  matplotlib.py  plotly.py
src/seq/: __init__.py  _align.py  _cigar.py  _dazz.py  _dotplot.py  _igv.py  _io.py  _seqtype.py  _stats.py  _type.py  _util.py  _viz_chrom_anno.py  _viz_pileup.py  _viz_wg_anno.py  align.py  align_affine.py  alt_consensus.py  cigar.py  consed.py  dazz.py  dotplot.py  fastx.py  io.py  kmer.py  type_deprecated.py  util.py
src/seq/viz/: __init__.py  _alignment_plot.py  _anno_bar.py  _anno_line.py  _depth.py  _dotplot.py  _genome_feature.py  _igv.py  _pileup.py  _region_feature.py
src/util/: __init__.py  _counter.py  _image.py  _parallel.py  _pickle.py  _proc.py  _scheduler.py  _util.py  interval.py  io.py  proc.py  scheduler.py  type.py  union_find.py
tests/seq/: test_align.py
