[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "wheel"]

[project]
authors = [
  {name = "Yoshihiko Suzuki", email = "yoshi.suzuki.1992@gmail.com"},
]
dependencies = [
  "logzero",
  "edlib",
  "numpy",
  "matplotlib",
  "pyfastx",
  "pysam",
  "igv-notebook",
  "plotly_light >= 1.0",
]
description = "miscellaneous BioInformatics ToolS"
license = {file = "LICENSE"}
name = "bits-yoshi"
readme = "README.md"
requires-python = ">=3.7"
version = "0.2.1"

[project.urls]
Homepage = "https://github.com/yoshihikosuzuki/bits"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
