[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project.urls]
Homepage = "https://github.com/yoshihikosuzuki/bits"

[project]
authors = [
  {name = "Yoshihiko Suzuki", email = "yoshi.suzuki.1992@gmail.com"},
]
dependencies = [
  "logzero",
  "edlib",
  "numpy",
  "matplotlib",
  "pyfastx",
  "pysam",
  "igv-notebook",
  "pygenomeviz >= 1",
  "plotly_light >= 2",
]
description = "miscellaneous BioInformatics ToolS"
license = {file = "LICENSE"}
name = "bits-yoshi"
readme = "README.md"
requires-python = ">=3.7"
version = "0.2.1"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
