[metadata]
name = bits-yoshi
version = 0.1.1
author = Yoshihiko Suzuki
author_email = ys.neoteny@gmail.com
url = https://github.com/yoshihikosuzuki/bits
description = miscellaneous BioInformatics ToolS
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
python_requires = >= 3.7
package_dir =
  bits = src
packages =
  bits
  bits.seq
  bits.util
install_requires =
  logzero == 1.7.0
  edlib == 1.3.9
  numpy == 1.21.6
  matplotlib == 3.5.2
  pyfastx == 0.8.4
