[metadata]
name = bits-yoshi
version = 0.2.0
author = Yoshihiko Suzuki
author_email = yoshi.suzuki.1992@gmail.com
url = https://github.com/yoshihikosuzuki/bits
description = miscellaneous BioInformatics ToolS
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
python_requires = >= 3.7
package_dir =
  bits = src
packages =
  bits
  bits.seq
  bits.seq.viz
  bits.util
install_requires =
  logzero
  edlib
  numpy
  matplotlib
  pyfastx
  pysam
  igv-notebook
  plotly_light >= 1.0
